# dspy_examples

./: .env.example  .gitignore  Lesson_2.ipynb  Lesson_3.ipynb  Lesson_4.ipynb  README.md  pyproject.toml
.cursor/rules/: cursor_rules.mdc
.cursor/rules/AGNO/: AGNO_Agent_Parameters.mdc  AGNO_Agent_State.mdc  AGNO_Core_Agent_Architecture.mdc  AGNO_Knowledge_Integration.mdc  AGNO_Memory_Management.mdc  AGNO_Models_Integration.mdc  AGNO_Multimodal.mdc  AGNO_Reasoning_Capabilities.mdc  AGNO_Session_Storage.mdc  AGNO_Structured.mdc  AGNO_Structured_Output.mdc  AGNO_Team_Modes.mdc  AGNO_Teams_Implementation.mdc  AGNO_Tools_Integration.mdc  AGNO_VectorDB_Integration.mdc  AGNO_Workflows.mdc
.cursor/rules/DSPy/: 00_DSPy_Core_Workflow.mdc  00_DSPy_Intro_and_Philosophy.mdc  01_DSPy_Composing_Modules.mdc  01_DSPy_Module_ChainOfThought.mdc  01_DSPy_Module_Predict.mdc  01_DSPy_Module_ProgramOfThought.mdc  01_DSPy_Module_ReAct_and_Tools.mdc  01_DSPy_Modules_Overview.mdc  01_DSPy_Signatures.mdc  01_DSPy_Signatures_Custom.mdc  02_DSPy_LM_Best_Practices.mdc  02_DSPy_LM_Configuration.mdc  03_DSPy_Data_Handling.mdc  03_DSPy_Retrieval_Clients.mdc  03_DSPy_Retrieval_Overview.mdc  04_DSPy_Advanced_Optimizers.mdc  04_DSPy_BootstrapFewShot.mdc  04_DSPy_Optimizers_Overview.mdc  04_DSPy_Signature_Optimizers.mdc  05_DSPy_Custom_Metrics.mdc  05_DSPy_Evaluation_Workflow.mdc  05_DSPy_Standard_Metrics.mdc  05_DSPy_Tracing_and_Debugging.mdc  06_DSPy_Caching_and_Performance.mdc  06_DSPy_Program_IO.mdc  06_DSPy_Schema_Enforcement.mdc  (+7 more)
dspy_program/: celebrity.json
dspy_program/celebrity/: program.pkl
(+66 files in other folders)
