[project]
name = "dspy_local"
version = "0.1.0"
description = "Local Dspy projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.2",
    "dspy>=2.6.27",
    "helper>=2.5.0",
    "ipykernel>=6.29.5",
    "mlflow>=3.1.0",
    "pydantic>=2.11.6",
    "rich>=14.0.0",
]
